fixing height to fit on iphone 6 screen (not in web-app mode)

--- a/src/scss/partials/_comparison.scss
+++ b/src/scss/partials/_comparison.scss
@@ -49,7 +49,7 @@
     color: #555;
     font-size: 30px;
     font-weight: normal;
-    height: 165px;
+    height: 145px;
     margin: 20px 20px;
     text-align: center;
     width: 100%;
@@ -89,7 +89,6 @@
     position: relative;
     flex: 1;
     margin: auto;
-    min-height: 205px;
     text-align: left;
     transition: all 0.2s;
 
@@ -101,6 +100,10 @@
     .icon--corner {
         right: 3px;
         top: 6px;
+    }
+
+    @include respond-min($cols-3) {
+        min-height: 205px;
     }
 }
 
@@ -114,10 +117,16 @@
 
 .movie-tile__img {
     float: left;
-    margin: 2px 12px 13px 0;
+    margin: 2px 12px 10px 0;
+    max-width: 45px;
+
+    @include respond-min($cols-3) {
+        margin-bottom: 18px;
+    }
 
     @include respond-min($cols-4) {
         margin: 2px 15px 30px 0;
+        max-width: none;
     }
 }
 
