--- a/src/scss/partials/_fonts.scss
+++ b/src/scss/partials/_fonts.scss
@@ -39,8 +39,12 @@ h1 {
 }
 
 h2 {
-    font-size: 1.3em;
+    font-size: 1.2em;
     margin: 0.83em 0;
+
+    @include respond-min($cols-3) {
+        font-size: 1.35em;
+    }
 
     @include respond-min($cols-5) {
         font-size: 1.5em;
