--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -21,24 +21,35 @@ header {
 }
 
 h1 {
-    font-size: 50px;
-    margin: 4px 0 0;
+    font-size: 55px;
+    margin: 12px 0 0;
+    line-height: 1;
     margin-right: auto;
     text-align: center;
     width: 100%;
 
+    @include respond-min($cols-3) {
+        font-size: 68px;
+        margin-top: 16px;
+    }
+
     @include respond-min($cols-4) {
-        font-size: 75px;
+        font-size: 96px;
+        margin-top: 20px;
     }
 }
 
 .intro {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 1.7;
-    margin: 0 10px 10px;
+    margin: 0 25px 10px;
     text-align: center;
 
     @include respond-min($cols-3) {
+        font-size: 13px;
+    }
+
+    @include respond-min($cols-5) {
         font-size: 14px;
     }
 }
